# tej

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  build-web.sh  netlify.toml
.github/workflows/: build.yml  ci.yml  deploy.yml  release.yml
apps/tej-gui/: index.html  package-lock.json  package.json
apps/tej-gui/src/: App.svelte  SpeedGauge.svelte
apps/tej-gui/src-tauri/: Cargo.toml  tauri.conf.json
apps/tej-gui/src-tauri/src/: commands.rs  lib.rs  main.rs  state.rs
apps/tej-gui/src/stores/: speedtest.js
apps/tej-web/: README.md  app.js  index.html
crates/tej-cli/: Cargo.toml
crates/tej-cli/src/: display.rs  main.rs  output.rs
crates/tej-core/: Cargo-native.toml  Cargo-wasm.toml  Cargo.toml
crates/tej-core/src/: config.rs  data.rs  download.rs  error.rs  jitter.rs  latency.rs  lib-native.rs  lib-wasm.rs  lib.rs  packet_loss.rs  progress.rs  results.rs  runner.rs  upload.rs  wasm.rs
