[package]
name = "tej-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Core speed test measurement library for Tej"
keywords = ["speedtest", "network", "bandwidth", "latency"]
categories = ["network-programming", "command-line-utilities"]

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
rand = { workspace = true }
reqwest = { version = "0.12", features = ["stream"] }
futures = "0.3"
bytes = "1"
